Changes for 3.4.15rc1

New features:
.......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)

Bug fixes:
A......... [ZBX-14734] fixed the verification of the assignment of two web checks with the same name from different templates to one host (vasilijs)
..F....... [ZBX-14749] fixed cloning inherited host prototype on host (vasilijs)
..F....... [ZBX-14663] fixed calculation of Y zero position in graph (miks)
A......... [ZBX-14865] fixed "Field "parent_itemid" cannot be set to NULL" error message while importing multiple templates (Sasha)
........S. [ZBX-14854] improved preprocessor worker performance (MVekslers)
..F....... [ZBX-14811] fixed color of the host name in the title of the Screens (vasilijs)
..F....... [ZBX-14776] fixed sorting when changing status of media type (vasilijs)
..F....... [ZBX-14757] fixed fields becoming writable upon form refresh in host prototype form (vmurzins)
..F....... [ZBX-14689] fixed updating of the Graph list of host when selecting a group of hosts (vasilijs)
..F....... [ZBX-14803] fixed incorrect profile update causing page filter to sometimes show duplicate values (Ivo)
..F....... [ZBX-14727] fixed selection of data for trigger overview and graphs if first drop down entry is "none" (Ivo)
..F....... [ZBX-14650] fixed web.page.regexp item parameters description (gcalenko)
.......PS. [ZBX-14764] fixed crash that could occur when OpenIPMI pollers are configured (vso)
.......PS. [ZBX-14882] fixed crash in vmware collector when receiving invalid xml (vso)
........S. [ZBX-14908] fixed crash when processing internal trigger events and deleting triggers at the same time (vso)
.......PS. [ZBX-14853] fixed error of vmware items caused by misconfigured vmware maxQueryMetrics parameter (MVekslers)