@@ -1,4 +1,4 @@
-.TH ZABBIX_SERVER 8 "2016\-01\-13" Zabbix
+.TH ZABBIX_SERVER 8 "2018\-10\-11" Zabbix
 .SH NAME
 zabbix_server \- Zabbix server daemon
 .SH SYNOPSIS
@@ -57,11 +57,6 @@ Decrease log level, affects all processes if target is not specified
 Log level control targets
 .RS 4
 .TP 4
-.I pid
-Process identifier
-.RE
-.RS 4
-.TP 4
 .I process\-type
 All processes of specified type (e.g., poller)
 .RE
@@ -69,6 +64,11 @@ All processes of specified type (e.g., poller)
 .TP 4
 .I process\-type,N
 Process type and number (e.g., poller,3)
+.RE
+.RS 4
+.TP 4
+.I pid
+Process identifier, up to 65535. For larger values specify target as "process\-type,N" 
 .RE
 .RE
 .IP "\fB\-h\fR, \fB\-\-help\fR"
