@@ -107,9 +107,10 @@ const char	*help_message[] = {
 	"                                 target is not specified",
 	"",
 	"      Log level control targets:",
-	"        pid                      Process identifier",
 	"        process-type             All processes of specified type (e.g., poller)",
 	"        process-type,N           Process type and number (e.g., poller,3)",
+	"        pid                      Process identifier, up to 65535. For larger",
+	"                                 values specify target as \"process-type,N\"",
 	"",
 	"  -h --help                      Display this help message",
 	"  -V --version                   Display version number",
