@@ -4,6 +4,7 @@ New features:
 .......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)
 
 Bug fixes:
+.D.G...PS. [ZBX-14971] added note on runtime control with PID numbers larger than 65535 to server, proxy and agentd help messages and man pages (Andris)
 A......... [ZBX-14734] fixed the verification of the assignment of two web checks with the same name from different templates to one host (vasilijs)
 ..F....... [ZBX-14749] fixed cloning inherited host prototype on host (vasilijs)
 ..F....... [ZBX-14663] fixed calculation of Y zero position in graph (miks)
@@ -1378,6 +1379,7 @@ New features:
 .......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)
 
 Bug fixes:
+.D.G...PS. [ZBX-14971] added note on runtime control with PID numbers larger than 65535 to server, proxy and agentd help messages and man pages (Andris)
 A......... [ZBX-14734] fixed the verification of the assignment of two web checks with the same name from different templates to one host (vasilijs)
 ..F....... [ZBX-14749] fixed cloning inherited host prototype on host (vasilijs)
 ..F....... [ZBX-14663] fixed calculation of Y zero position in graph (miks)
